# webhook-data-processor

./: .gitignore  README.md  main.py  pyproject.toml  run_test.sh  webhook.py
files/: payloads.json
